fix gap above sticky heading in Chrome & Edge

--- a/stylesheets/primary-content.css
+++ b/stylesheets/primary-content.css
@@ -230,10 +230,9 @@
   */
 
   /* method B: padding top with a transparent background stop; negative top compensates for gap in Chrome */
-  background-image: linear-gradient(to bottom, transparent, transparent var(--header-height), #fff var(--header-height), #fff);
+  background-image: linear-gradient(to bottom, transparent, transparent calc(var(--header-height) - 0.05rem), #fff calc(var(--header-height) - 0.05rem));
   padding-top: calc(var(--header-height) + 0.25rem);
   margin-top: calc(-1 * var(--header-height) - 0.25rem + 1.75rem);
-  top: -0.5px;
 }
 
 .primary-content h3 {
